--- a/RegistroProdcuctos/AndroidManifest.xml
+++ b/RegistroProdcuctos/AndroidManifest.xml
@@ -22,6 +22,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Formulario"
+            android:label="@string/title_activity_formulario" >
+        </activity>
     </application>
 
 </manifest>
