--- a/Sentinel/app/src/main/AndroidManifest.xml
+++ b/Sentinel/app/src/main/AndroidManifest.xml
@@ -34,6 +34,11 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="pe.joedayz.sentinel.MainActivity" />
         </activity>
+
+
+        <provider
+            android:authorities="pe.joedayz.sentinel.app"
+            android:name=".data.WeatherProvider" />
     </application>
 
 </manifest>
